changes in README

--- a/env/README
+++ b/env/README
@@ -6,5 +6,5 @@ Instructions for installing the environment and conda:
 
 3. Use './create_environment.sh' to create the environment
 
-IMPORTANT: If you did not use 'source' but './' in the 2. step you have to execute:
-'export PATH="$HOME/miniconda/bin:$PATH"' after the 2. step
+IMPORTANT: If you did not use 'source' but './' in the 2. step you have to
+execute the last 3 commands by yourself in the CLI
