--- a/env/README
+++ b/env/README
@@ -2,9 +2,13 @@ Instructions for installing the environment and conda:
 
 1. Create interactive job: 'si --time=02:00:00 -c 7'
 
-2. Use 'source install_conda.sh' to install miniconda in your HOME directory (only use this ONCE)
+2. Use './install_conda.sh' to install miniconda in your HOME directory
 
 3. Use './create_environment.sh' to create the environment
 
-IMPORTANT: If you did not use 'source' but './' in the 2. step you have to
-execute the last 3 commands by yourself in the CLI
+IMPORTANT: If you installed the environment with the earlier version of this example and an
+error is thrown when executing the brats_train_hpc.sh or brats_deploy_hpc.sh ("module monai not found")
+just execute step 1+2 again
+
+If you want to remove conda at some point first execute 'conda init --reverse' and afterwards remove the
+miniconda folder in the HOME directory
